# shroud

./: Cargo.toml  README.MD
client/: Cargo.toml  config.toml
client/src/: config.rs  error.rs  main.rs  mini_cli.rs
network/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: crypt.rs  error.rs  lib.rs  packet.rs
server/: Cargo.toml  config.toml
server/src/: client_manager.rs  config.rs  error.rs  main.rs  server.rs  simple_impl.rs  tun_device.rs
server/src/handler/: mod.rs  tun.rs  udp.rs
sys-proxy/: Cargo.toml
sys-proxy/src/: main.rs
xray-cli/: Cargo.toml
xray-cli/src/: app.rs  config.rs  main.rs  xray.rs
xray-router/: Cargo.toml  config.json
xray-router/src/: config.rs  linux.rs  main.rs  proxy.rs  windows.rs
