[workspace]
members = ["client", "protocol", "server"]

[workspace.dependencies]
thiserror = "2.0.12"
tun = { version = "0.7.18", features = ["async"] }
tokio = { version = "1.45.0", features = ["full", "signal"] }
aes-gcm = { version = "0.10", features = ["std"] }
bincode = "1.3.3"
serde = "1.0"
serde_derive = "1.0.190"

tokio-tun = "0.13.2"
dashmap = "7.0.0-rc2"
arc-swap = "1.7.1"
bytes = "1.10.1"
futures = "0.3.31"

log = "0.4.27"
pretty_env_logger = "0.5.0"