[workspace]
members = ["client", "protocol", "server", "network"]

[workspace.dependencies]
thiserror = "2.0.17"
tun = { version = "0.7.18", features = ["async"] }
tokio = { version = "1.45.0", features = ["full", "signal"] }
aes-gcm = { version = "0.10", features = ["std"] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

tokio-tun = "0.13.2"
dashmap = "7.0.0-rc2"
clap = { version = "4.5.38", features = ["derive"] }
toml = "0.8.22"

log = "0.4.27"
pretty_env_logger = "0.5.0"