[package]
name = "vless-xray-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "4.0"
once_cell = "1.16"