[package]
name = "xray-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
etherparse = "0.18.0"
socket2 = "0.5.10"
tokio-socks = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytes = "1.10.1"
log = "0.4.27"
env_logger = "0.11.8"
libc = "0.2.172"

[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.8.0", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_NetworkManagement_WindowsFilteringPlatform"] }